--- a/m/busi/steps/base.html
+++ b/m/busi/steps/base.html
@@ -15,14 +15,14 @@
         <div title="填写基本信息">
             <div class="weui-cells__title" id="title">联系信息</div>
             <div class="weui-cells weui-cells_form">
-                <div class="weui-cell">
+                <!--div class="weui-cell">
                     <div class="weui-cell__hd">
                         <label class="weui-label">商户简称<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" name="mchnt_abbr" required="" placeholder="请输入商户简称">
                     </div>
-                </div>
+                </div-->
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
                         <label class="weui-label">营业执照号</label>
@@ -33,20 +33,28 @@
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
-                        <label class="weui-label">联系人<span class="required">*</span></label>
+                        <label class="weui-label">法人姓名<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="linkman" required="" pattern="" placeholder="请输入联系人">
+                        <input class="weui-input" type="text" name="cert_name" required="" pattern="" placeholder="请输入法人姓名">
                     </div>
                 </div>
                 <div class="weui-cell">
+                    <div class="weui-cell__hd">
+                        <label class="weui-label">法人证件<span class="required">*</span></label>
+                    </div>
+                    <div class="weui-cell__bd">
+                        <input class="weui-input" type="text" name="cert_id" id="cert_id" required="" readonly>
+                    </div>
+                </div>
+                <!--div class="weui-cell">
                     <div class="weui-cell__hd">
                         <label class="weui-label">手机号<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="number" name="mobile" required="" placeholder="请输入手机号" validType="mobile" invalidTips="请输入有效的手机号">
                     </div>
-                </div>
+                </div-->
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
                         <label class="weui-label">所在地区<span class="required">*</span></label>
@@ -57,6 +65,7 @@
                         <input type="hidden" name="city">
                         <input type="hidden" name="district">
                     </div>
+                    <div class="weui-cell__fd" id="Location"><i class="weui-icon-info-circle"></i></div>
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
@@ -64,14 +73,6 @@
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" name="addr" required="" placeholder="请输入详细地址" id="addr">
-                    </div>
-                </div>
-                <div class="weui-cell">
-                    <div class="weui-cell__hd">
-                        <label class="weui-label">证件号码<span class="required">*</span></label>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="cert_id" id="cert_id" required="" readonly>
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -103,6 +104,7 @@
         </div>
         <div class="weui-btn-area btn-area">
             <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_default">提交至后台</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <a id="flow-btn" href="javascript:" class="weui-btn weui-btn_primary">继续完善</a>
         </div>
     </form>
@@ -242,9 +244,11 @@
         //weui.form.checkIfBlur('#form', $$.rules);
 		
 		LoadForm();
-        getLocation(function(addr) {
-            setPickerValues('#city-picker', districtData, [addr.province, addr.city, addr.district]);
-            $('#addr').val(addr.province + addr.city + addr.district + addr.street + addr.streetNumber);
+        $('#Location').on('click', function() {
+			getLocation(function(addr) {
+				setPickerValues('#city-picker', districtData, [addr.province, addr.city, addr.district]);
+				$('#addr').val(addr.province + addr.city + addr.district + addr.street + addr.streetNumber);
+			})
         });
     });
     </script>
