--- a/m/busi/steps/extra-info.html
+++ b/m/busi/steps/extra-info.html
@@ -18,10 +18,34 @@
 				<div class="weui-cells weui-cells_form">
 					<div class="weui-cell">
 						<div class="weui-cell__hd">
+							<label class="weui-label">商户简称<span class="required">*</span></label>
+						</div>
+						<div class="weui-cell__bd">
+							<input class="weui-input" type="text" name="mchnt_abbr" id="mchnt_abbr" required="" placeholder="请输入商户简称">
+						</div>
+					</div>
+					<div class="weui-cell">
+						<div class="weui-cell__hd">
 							<label class="weui-label">门店名称<span class="required">*</span></label>
 						</div>
 						<div class="weui-cell__bd">
-							<input class="weui-input" type="text" name="shop_name" required="">
+							<input class="weui-input" type="text" name="shop_name" id="shop_name" required="" placeholder="请输入门店名称">
+						</div>
+					</div>
+					<div class="weui-cell">
+						<div class="weui-cell__hd">
+							<label class="weui-label">联系人<span class="required">*</span></label>
+						</div>
+						<div class="weui-cell__bd">
+							<input class="weui-input" type="text" name="linkman" required="" pattern="" placeholder="请输入联系人">
+						</div>
+					</div>
+					<div class="weui-cell">
+						<div class="weui-cell__hd">
+							<label class="weui-label">手机号<span class="required">*</span></label>
+						</div>
+						<div class="weui-cell__bd">
+							<input class="weui-input" type="number" name="mobile" required="" placeholder="请输入手机号" validType="mobile" invalidTips="请输入有效的手机号">
 						</div>
 					</div>
 					<div class="weui-cell" id="debit-card-fee-cell">
@@ -112,6 +136,7 @@
 			</div>
 			<div class="weui-btn-area btn-area">
 				<a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="history.back()">上一步</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;
 				<a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">提交</a>
 			</div>
 		</form>
@@ -190,6 +215,10 @@
         $('#submit-btn').on('click', onSubmit);
         $('#city-picker').on('focus', function() {
             $$.showPicker(this, districtData);
+        });
+		
+		$('#shop_name').on('focus', function() {
+            $('#shop_name').val($('#mhcnt_abbr').val());
         });
         // 失去焦点时检测
         //weui.form.checkIfBlur('#form', $$.rules);
