--- a/m/index.html
+++ b/m/index.html
@@ -50,12 +50,18 @@
                     </div>
                     <p class="weui-grid__label">入网测试版</p>
                 </a>
-                <a href="javascript:;" class="weui-grid">
+                <a href="busi/steps/app-busi.html" class="weui-grid" name="test">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_actionSheet.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">入网进度测试</p>
+                </a>
+                <!--a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_actionSheet.png" alt="">
                     </div>
                     <p class="weui-grid__label">&nbsp;</p>
-                </a>
+                </a-->
                 <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_actionSheet.png" alt="">
