--- a/m/user-binding.html
+++ b/m/user-binding.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>账户登录</title>
+    <title>用户绑定</title>
     <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
 </head>
 
@@ -35,23 +35,14 @@
             </div>
         </div>
         <div class="weui-btn-area">
-            <a class="weui-btn weui-btn_primary" href="javascript:" id="login-btn">登录</a>
+            <a class="weui-btn weui-btn_primary" href="javascript:" id="login-btn">确认绑定</a>
         </div>
     </form>
-    <div class="weui-cell weui-cell_link">
-        <a href="register.html" class="weui-cell__bd" style="text-align: left;">免费注册</a>
-        <a href="reset-pwd.html" class="weui-cell__bd" style="text-align: right;">忘记密码</a>
-    </div>
     <script type="text/javascript" src="js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript" src="js/lib/jsencrypt.min.js"></script>
     <script type="text/javascript">
     var query = $$.parseQueryString();
-
-	var login_data = $$.getData('login_in');
-	if(login_data) {
-		weui.form.load('#form', login_data);
-	}
 		
     function encryptPassword(password) {
         //加密密码
@@ -66,15 +57,19 @@
         var data = $('#form').serializeObject();
 		var save_data = $.extend({}, data);
         data.login_pwd = encryptPassword(data.login_pwd);
-
-        $$.request('/m/action/user/login', data, {
+        data.openid = openid;
+		if(openid == null) {
+			weui.alert('无法获取openid,请退出重新绑定！', {
+				title: '提示'
+			});
+			return;
+		}
+        $$.request('/m/action/user/binding', data, {
             success: function(data) {
                 if(data.errcode == 0) {
-					$$.setData('login_in', save_data);
-                    weui.toast('登录成功', function () {
-                        // window.history.back(-1);
-                        //window.location.href = query.goto_page || $$.wrapUrl('/m/index.html');
-						window.location.href = query.goto_page || $$.wrapUrl('/m/index.html');
+                    weui.toast('绑定成功！', function () {
+						$$.setData('login_in', save_data);
+                    	window.location.href = query.goto_page || $$.wrapUrl('/m/index.html');
                     });
                 } else {
                     weui.topTips(data.errmsg);
@@ -82,7 +77,7 @@
             }
         });
     }
-
+		var openid;
     $(function() {
         weui.form.checkIfBlur('#form');
 
@@ -94,6 +89,11 @@
             }
         });
         $('#login-btn').on('click', login);
+        $$.request('/m/action/auth2', query, {
+            success: function(data) {
+                openid = data.openid;
+            }
+        });
     });
     </script>
 </body>
