--- a/m/busi/steps/base.html
+++ b/m/busi/steps/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" > 
     <title>基本信息</title>
     <link rel="stylesheet" href="../../js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="../../css/ui-base.css">
@@ -55,7 +55,7 @@
                         <input class="weui-input" type="number" name="mobile" required="" placeholder="请输入手机号" validType="mobile" invalidTips="请输入有效的手机号">
                     </div>
                 </div-->
-                <div class="weui-cell">
+                <div class="weui-cell weui-cell_vcode">
                     <div class="weui-cell__hd">
                         <label class="weui-label">所在地区<span class="required">*</span></label>
                     </div>
@@ -65,7 +65,10 @@
                         <input type="hidden" name="city">
                         <input type="hidden" name="district">
                     </div>
-                    <div class="weui-cell__fd" id="Location"><i class="weui-icon-info-circle"></i></div>
+                    <div class="weui-cell__fd" id="Location">
+                    <!--i class="icon-location"></i-->
+                    <img class="weui-vcode-img" src="../../css/location.svg"></img>
+                    </div>
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
@@ -105,7 +108,7 @@
         <div class="weui-btn-area btn-area">
             <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_default">提交至后台</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a id="flow-btn" href="javascript:" class="weui-btn weui-btn_primary">继续完善</a>
+            <a id="flow-btn" href="javascript:" class="weui-btn weui-btn_primary">信息完善</a>
         </div>
     </form>
     <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script>
@@ -116,9 +119,10 @@
     var query = $$.parseQueryString();
 
 	var baseurl = '/test';
-	history.pushState(null, null, 'photos.html?'+$.param(query));
+	
+	history.pushState(null, null, document.URL);
 	window.addEventListener('popstate', function () {
-		//window.location.href = 'photos.html?'+$.param(query);
+		window.location.href = 'photos.html?'+$.param(query);
 	});
 		
     function onSubmit() {
@@ -215,6 +219,7 @@
 				success: function(data) {
 					if (data.errcode == 0) {
 						weui.form.load('#form', data.data);
+						setPickerValues('#city-picker', districtData, [data.data.province_name,data.data.city_name,data.data.district_name]);
 					} else {
 
 					}
@@ -240,10 +245,10 @@
                 url: '/action/bm/bank-branch/search_move'
             }).search();
         });
-        // 失去焦点时检测
-        //weui.form.checkIfBlur('#form', $$.rules);
-		
 		LoadForm();
+		
+		// 失去焦点时检测
+        weui.form.checkIfBlur('#form', $$.rules);
         $('#Location').on('click', function() {
 			getLocation(function(addr) {
 				setPickerValues('#city-picker', districtData, [addr.province, addr.city, addr.district]);
