--- a/m/busi/steps/extra-info.html
+++ b/m/busi/steps/extra-info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" >
     <title>补充信息</title>
     <link rel="stylesheet" href="../../js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="../../css/ui-base.css">
@@ -18,7 +18,7 @@
 				<div class="weui-cells weui-cells_form">
 					<div class="weui-cell">
 						<div class="weui-cell__hd">
-							<label class="weui-label">商户简称<span class="required">*</span></label>
+							<label class="weui-label">商户名称<span class="required">*</span></label>
 						</div>
 						<div class="weui-cell__bd">
 							<input class="weui-input" type="text" name="mchnt_abbr" id="mchnt_abbr" required="" placeholder="请输入商户简称">
@@ -68,7 +68,7 @@
 					</div>
 					<div class="weui-cell weui-cell_vcode" id="fee-cell">
 						<div class="weui-cell__hd">
-							<label for="" class="weui-label">手续费<span class="required">*</span></label>
+							<label for="" class="weui-label">扫码手续费<span class="required">*</span></label>
 						</div>
 						<div class="weui-cell__bd">
 							<input class="weui-input for_busi" name="fee" type="text" required="" pattern="^\d+\.?\d*$" placeholder="请输入手续费千分比" invalidTips="请输入正确的手续费">
@@ -218,12 +218,12 @@
         });
 		
 		$('#shop_name').on('focus', function() {
-            $('#shop_name').val($('#mhcnt_abbr').val());
+            $('#shop_name').val($('#mchnt_abbr').val());
         });
-        // 失去焦点时检测
-        //weui.form.checkIfBlur('#form', $$.rules);
-		
 		LoadForm();
+		
+		// 失去焦点时检测
+        weui.form.checkIfBlur('#form', $$.rules);
 		$('#mcc-select2').on('focus', function() {
             $$.showSelect2(this, {
                 title: '搜索商户类别',
