--- a/m/busi/steps/select-busi.html
+++ b/m/busi/steps/select-busi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" > 
     <title>入网业务</title>
     <link rel="stylesheet" href="../../js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="../../css/ui-base.css">
@@ -119,7 +119,7 @@
     </script>
     <script>
     var query = $$.parseQueryString();
-	
+	var acq_inst_id, busi_type;
 	function back() {
 		window.location.href = '../../index.html';
 	}
@@ -134,6 +134,66 @@
 		}
 	});
 		
+	var SearchBusi = weui.searchPage('#page2', {
+		resultTpl: '#list-template',
+
+		loader: function(param, success, error) {
+			console.log(arguments);
+			$$.request('/action/bm/acq-inst-busi/list', {
+				acq_inst_id: acq_inst_id
+			}, {
+				success: function(data) {
+					if (data.errcode == 0) {
+						success(data.rows);
+					} else {
+						weui.alert(data.errmsg, {
+							title: '提示'
+						});
+					}
+				},
+				error: error
+			});
+		},
+		onInput: function() {
+			console.log(arguments);
+		},
+		onClickItem: function(row) {
+			weui.page.show('#page3');
+			busi_type = row.busi_type;
+			SearchMchntType.search();
+		}
+	})
+	
+	var SearchMchntType = weui.searchPage('#page3', {
+		resultTpl: '#mt-template',
+
+		loader: function(param, success, error) {
+			console.log(arguments);
+			$$.request('/action/bm/mchnt-type/list', {}, {
+				success: function(data) {
+					if (data.errcode == 0) {
+						success(data.rows);
+					} else {
+						weui.alert(data.errmsg, {
+							title: '提示'
+						});
+					}
+				},
+				error: error
+			});
+		},
+		onInput: function() {
+			console.log(arguments);
+		},
+		onClickItem: function(row) {
+			var param = {busi_type: busi_type,
+						 acq_inst_id: acq_inst_id,
+						 mchnt_type: row.value};
+			$.extend({}, query, param);
+			window.location.href = "./photos.html?" + $.param(param);
+		}
+	})
+	
 	weui.searchPage('#page1', {
 		resultTpl: '#acq-template',
 		loader: function(param, success, error) {
@@ -152,64 +212,8 @@
 		},
 		onClickItem: function(row) {
 			weui.page.show('#page2');
-			var acq_inst = row.acq_inst_id;
-			weui.searchPage('#page2', {
-				resultTpl: '#list-template',
-				
-				loader: function(param, success, error) {
-					console.log(arguments);
-					$$.request('/action/bm/acq-inst-busi/list', {
-						acq_inst_id: acq_inst
-					}, {
-						success: function(data) {
-							if (data.errcode == 0) {
-								success(data.rows);
-							} else {
-								weui.alert(data.errmsg, {
-									title: '提示'
-								});
-							}
-						},
-						error: error
-					});
-				},
-				onInput: function() {
-					console.log(arguments);
-				},
-				onClickItem: function(row) {
-					weui.page.show('#page3');
-					var busi_type = row.busi_type;
-					weui.searchPage('#page3', {
-						resultTpl: '#mt-template',
-
-						loader: function(param, success, error) {
-							console.log(arguments);
-							$$.request('/action/bm/mchnt-type/list', {}, {
-								success: function(data) {
-									if (data.errcode == 0) {
-										success(data.rows);
-									} else {
-										weui.alert(data.errmsg, {
-											title: '提示'
-										});
-									}
-								},
-								error: error
-							});
-						},
-						onInput: function() {
-							console.log(arguments);
-						},
-						onClickItem: function(row) {
-							var param = {busi_type: busi_type,
-										 acq_inst_id: acq_inst,
-										 mchnt_type: row.value};
-							$.extend({}, query, param);
-							window.location.href = "./photos.html?" + $.param(param);
-						}
-					}).search()
-				}
-			}).search()
+			acq_inst_id = row.acq_inst_id;
+			SearchBusi.search();
         }
     }).search();
     
