--- a/m/busi/steps/extra-info.html
+++ b/m/busi/steps/extra-info.html
@@ -68,10 +68,10 @@
 					</div>
 					<div class="weui-cell weui-cell_vcode" id="fee-cell">
 						<div class="weui-cell__hd">
-							<label for="" class="weui-label">扫码手续费<span class="required">*</span></label>
+							<label for="" class="weui-label">扫码手续费</label>
 						</div>
 						<div class="weui-cell__bd">
-							<input class="weui-input for_busi" name="fee" type="text" required="" pattern="^\d+\.?\d*$" placeholder="请输入手续费千分比" invalidTips="请输入正确的手续费">
+							<input class="weui-input for_busi" name="fee" type="text" pattern="^\d+\.?\d*$" placeholder="请输入手续费千分比" invalidTips="请输入正确的手续费">
 						</div>
 						<div class="weui-cell__ft">
 							<button class="weui-vcode-btn">‰</button>
